--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,23 @@
-.bundle
-Gemfile.lock
-*.orig
-*.patch
-pkg/
-*.rej
-spec/fixtures/manifests/
-spec/fixtures/modules/
-*.swp
-.vagrant
+.*.sw[op]
+.metadata
+.yardoc
+.yardwarns
+*.iml
+/.bundle/
+/.idea/
+/.vagrant/
+/coverage/
+/bin/
+/doc/
+/Gemfile.local
+/Gemfile.lock
+/junit/
+/log/
+/log/
+/pkg/
+/spec/fixtures/manifests/
+/spec/fixtures/modules/
+/tmp/
+/vendor/
+/convert_report.txt
+
