--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,11 +8,14 @@ AllCops:
   Exclude:
   - bin/*
   - ".vendor/**/*"
-  - Gemfile
-  - Rakefile
+  - "**/Gemfile"
+  - "**/Rakefile"
   - pkg/**/*
   - spec/fixtures/**/*
   - vendor/**/*
+  - "**/Puppetfile"
+  - "**/Vagrantfile"
+  - "**/Guardfile"
 Metrics/LineLength:
   Description: People have wide screens, use them.
   Max: 200
@@ -63,6 +66,14 @@ Style/TrailingCommaInLiteral:
 Style/SymbolArray:
   Description: Using percent style obscures symbolic intent of array's contents.
   EnforcedStyle: brackets
+RSpec/MessageSpies:
+  EnforcedStyle: receive
+Style/Documentation:
+  Exclude:
+  - lib/puppet/parser/functions/**/*
+  - spec/**/*
+Style/WordArray:
+  EnforcedStyle: brackets
 Style/CollectionMethods:
   Enabled: true
 Style/MethodCalledOnDoEndBlock:
@@ -70,6 +81,8 @@ Style/MethodCalledOnDoEndBlock:
 Style/StringMethods:
   Enabled: true
 Layout/EndOfLine:
+  Enabled: false
+Layout/IndentHeredoc:
   Enabled: false
 Metrics/AbcSize:
   Enabled: false
@@ -103,17 +116,3 @@ Style/IfUnlessModifier:
   Enabled: false
 Style/SymbolProc:
   Enabled: false
-
-## Tim additions to work with my world and this module's long-ish history
-Layout/DotPosition: 
-  Enabled: false    # doesn't work with Ruby 1.8
-Layout/EmptyLinesAroundBlockBody:
-  Enabled: false    # easier to read regardless
-RSpec/ImplicitExpect:
-  Enabled: false    # was already using the old format
-Style/HashSyntax:
-  EnforcedStyle: no_mixed_keys  # doesn't work with Ruby 1.8
-Style/RegexpLiteral: 
-  Enabled: false  # was already using the old format
-Style/TrailingCommaInArguments:
-  Enabled: false  # doesn't work with Ruby 1.8
